2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* html.man: More semantic markup, less visual one.

2002-08-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* html.tcl: Updated 'info exist' to 'info exists'.

2002-06-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:
	* html.tcl:
	* html.n:
	* html.man: Bumped to version 1.2.1.

2002-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* html.man: Added doctools manpage.

2002-02-14  Joe English  <jenglish@users.sourceforge.net>

	* html.n: Remove mention of (unimplemented, undocumented) 
	  formatCode procedure (SF BUG #461434).

2002-01-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.2

2002-01-11  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* html.n:
	* html.tcl: Accepted patch #484117 provided by Decoster Jos
	  <decosterjos@users.sourceforge.net> providing two new function
	  to generated lists and parameterized table rows.

2001-10-16  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* html.n:
	* html.test:
	* html.tcl:
	* pkgIndex.tcl: Version up to 1.1.1

2001-08-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* html.tcl: added 8.1+ improved version of quoteFormValue.

2001-07-10  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* html.tcl: Frink 2.2 run, fixed dubious code.

2001-06-19  Melissa Chawla <melissachawla@yahoo.com>

	* modules/html/html.tcl: Added set and eval commands to this
 	package.  These commands have the same syntax as those built in to
 	Tcl, but they are reworked to return "" so they blend into HTML
 	template files without appending unwanted results.  The html::set
 	command must take two arguments.

2001-06-15  Brent Welch <welch@panasas.com>

	* modules/html/html.tcl: Updated the version to 1.1
	Removed the "namespace export *" because you really do not
	want to import these routines, especialy the new "if", "foreach", etc.
