@@ -1,3 +1,9 @@
+2003-02-24  David N. Welton  <davidw@dedasys.com>
+
+	* html.tcl (html::quoteFormValue): Package requires Tcl 8.2 in any
+	case, so having an implementation of this proc for older Tcl
+	versions doesn't make much sense.
+
 2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* html.man: More semantic markup, less visual one.
